[tool.poetry]
name = "Calls-Processing-API"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
uvicorn = "^0.27.1"
greenlet = "^3.0.3"
soundfile = "^0.12.1"
aiohttp = "^3.10.8"
textblob = "^0.18.0.post0"
# spacy = "^3.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
